@@ -1,4 +1,3 @@
-import com.google.common.collect.Lists;
 import com.mojang.brigadier.StringReader;
 import com.mojang.brigadier.arguments.ArgumentType;
 import com.mojang.brigadier.context.CommandContext;
@@ -6,58 +5,37 @@ import com.mojang.brigadier.exceptions.CommandSyntaxException;
 import com.mojang.brigadier.exceptions.DynamicCommandExceptionType;
 import com.mojang.brigadier.suggestion.Suggestions;
 import com.mojang.brigadier.suggestion.SuggestionsBuilder;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
 import java.util.concurrent.CompletableFuture;
 
-public class fs implements ArgumentType<fec> {
-   private static final Collection<String> b = Arrays.asList("foo", "foo.bar.baz", "minecraft:foo");
-   public static final DynamicCommandExceptionType a = new DynamicCommandExceptionType($$0 -> wv.b("argument.criteria.invalid", $$0));
-
-   private fs() {
-   }
+public class fs implements ArgumentType<cwi> {
+   private static final Collection<String> a = List.of("container.*", "container.5", "weapon");
+   private static final DynamicCommandExceptionType b = new DynamicCommandExceptionType($$0 -> ww.b("slot.unknown", $$0));
 
    public static fs a() {
       return new fs();
    }
 
-   public static fec a(CommandContext<ex> $$0, String $$1) {
-      return (fec)$$0.getArgument($$1, fec.class);
+   public static cwi a(CommandContext<ei> $$0, String $$1) {
+      return (cwi)$$0.getArgument($$1, cwi.class);
    }
 
-   public fec a(StringReader $$0) throws CommandSyntaxException {
-      int $$1 = $$0.getCursor();
-
-      while ($$0.canRead() && $$0.peek() != ' ') {
-         $$0.skip();
+   public cwi a(StringReader $$0) throws CommandSyntaxException {
+      String $$1 = em.a($$0, $$0x -> $$0x != ' ');
+      cwi $$2 = cwj.a($$1);
+      if ($$2 == null) {
+         throw b.createWithContext($$0, $$1);
+      } else {
+         return $$2;
       }
-
-      String $$2 = $$0.getString().substring($$1, $$0.getCursor());
-      return fec.a($$2).orElseThrow(() -> {
-         $$0.setCursor($$1);
-         return a.createWithContext($$0, $$2);
-      });
    }
 
    public <S> CompletableFuture<Suggestions> listSuggestions(CommandContext<S> $$0, SuggestionsBuilder $$1) {
-      List<String> $$2 = Lists.newArrayList(fec.c());
-
-      for (awt<?> $$3 : md.v) {
-         for (Object $$4 : $$3.b()) {
-            String $$5 = this.a($$3, $$4);
-            $$2.add($$5);
-         }
-      }
-
-      return fc.b($$2, $$1);
-   }
-
-   public <T> String a(awt<T> $$0, Object $$1) {
-      return awr.a($$0, (T)$$1);
+      return en.b(cwj.a(), $$1);
    }
 
    public Collection<String> getExamples() {
-      return b;
+      return a;
    }
 }
