@@ -1,48 +1,248 @@
-import java.util.List;
-import java.util.Optional;
+import com.google.common.collect.ImmutableList;
+import com.mojang.datafixers.util.Pair;
 
-public interface qr {
-   static void a(qg<epm> $$0) {
-      jt<epg> $$1 = $$0.a(me.aZ);
-      jt<dis> $$2 = $$0.a(me.aM);
-      js.c<epm> $$3 = $$0.a(
-         eoz.a,
-         new epm(
-            List.of(epm.a($$1.b(epa.t)), epm.a($$1.b(epa.u)), epm.a($$1.b(epa.v)), epm.a($$1.b(epa.w)), epm.a($$1.b(epa.x))), new eqb(34, 8, eqc.a, 10387312)
-         )
-      );
-      $$0.a(eoz.b, new epm($$1.b(epa.f), new eqb(32, 8, eqc.a, 14357617)));
-      $$0.a(eoz.c, new epm($$1.b(epa.g), new eqb(32, 8, eqc.a, 14357618)));
-      $$0.a(eoz.d, new epm($$1.b(epa.e), new eqb(32, 8, eqc.a, 14357619)));
-      $$0.a(eoz.e, new epm($$1.b(epa.j), new eqb(32, 8, eqc.a, 14357620)));
-      $$0.a(eoz.f, new epm($$1.b(epa.a), new eqb(kn.i, eqd.c.b, 0.2F, 165745296, Optional.of(new eqd.a($$3, 10)), 32, 8, eqc.a)));
-      $$0.a(eoz.q, new epm($$1.b(epa.F), new eqb(24, 8, eqc.a, 20083232)));
-      $$0.a(eoz.g, new epm($$1.b(epa.l), new eqb(32, 5, eqc.b, 10387313)));
-      $$0.a(eoz.h, new epm($$1.b(epa.d), new eqb(80, 20, eqc.b, 10387319)));
-      $$0.a(eoz.i, new epm($$1.b(epa.r), new eqb(new kn(9, 0, 9), eqd.c.c, 0.01F, 0, Optional.empty(), 1, 0, eqc.a)));
-      $$0.a(eoz.j, new epm(List.of(epm.a($$1.b(epa.b)), epm.a($$1.b(epa.c))), new eqb(kn.i, eqd.c.d, 0.004F, 0, Optional.empty(), 1, 0, eqc.a)));
+public class qr {
+   public static final ald<ers> a = qo.a("village/snowy/town_centers");
+   private static final ald<ers> b = qo.a("village/snowy/terminators");
+
+   public static void a(qh<ers> $$0) {
+      jf<epm> $$1 = $$0.a(mg.aZ);
+      je<epm> $$2 = $$1.b(sa.h);
+      je<epm> $$3 = $$1.b(sa.c);
+      je<epm> $$4 = $$1.b(sa.d);
+      jf<eui> $$5 = $$0.a(mg.ba);
+      je<eui> $$6 = $$5.b(qp.k);
+      je<eui> $$7 = $$5.b(qp.n);
+      je<eui> $$8 = $$5.b(qp.c);
+      jf<ers> $$9 = $$0.a(mg.bd);
+      je<ers> $$10 = $$9.b(qo.a);
+      je<ers> $$11 = $$9.b(b);
       $$0.a(
-         eoz.k,
-         new epm(
-            List.of(
-               epm.a($$1.b(epa.y)),
-               epm.a($$1.b(epa.z)),
-               epm.a($$1.b(epa.A)),
-               epm.a($$1.b(epa.B)),
-               epm.a($$1.b(epa.C)),
-               epm.a($$1.b(epa.D)),
-               epm.a($$1.b(epa.E))
+         a,
+         new ers(
+            $$10,
+            ImmutableList.of(
+               Pair.of(erq.a("village/snowy/town_centers/snowy_meeting_point_1"), 100),
+               Pair.of(erq.a("village/snowy/town_centers/snowy_meeting_point_2"), 50),
+               Pair.of(erq.a("village/snowy/town_centers/snowy_meeting_point_3"), 150),
+               Pair.of(erq.a("village/snowy/zombie/town_centers/snowy_meeting_point_1"), 2),
+               Pair.of(erq.a("village/snowy/zombie/town_centers/snowy_meeting_point_2"), 1),
+               Pair.of(erq.a("village/snowy/zombie/town_centers/snowy_meeting_point_3"), 3)
             ),
-            new eqb(40, 15, eqc.a, 34222645)
+            ers.a.b
          )
       );
-      $$0.a(eoz.l, new epm(List.of(epm.a($$1.b(epa.h)), epm.a($$1.b(epa.i))), new eqb(24, 4, eqc.a, 165745295)));
-      $$0.a(eoz.m, new epm(List.of(epm.a($$1.b(epa.m)), epm.a($$1.b(epa.n))), new eqb(20, 8, eqc.a, 14357621)));
-      $$0.a(eoz.n, new epm(List.of(epm.a($$1.b(epa.o), 2), epm.a($$1.b(epa.s), 3)), new eqb(27, 4, eqc.a, 30084232)));
-      $$0.a(eoz.o, new epm($$1.b(epa.p), new eqb(2, 1, eqc.a, 14357921)));
-      $$0.a(eoz.p, new epm($$1.b(epa.q), new eqb(20, 11, eqc.b, 10387313)));
-      $$0.a(eoz.r, new epm($$1.b(epa.k), new eqa(32, 3, 128, $$2.b(awy.o))));
-      $$0.a(eoz.s, new epm($$1.b(epa.G), new eqb(34, 8, eqc.a, 83469867)));
-      $$0.a(eoz.t, new epm($$1.b(epa.H), new eqb(34, 12, eqc.a, 94251327)));
+      qo.a(
+         $$0,
+         "village/snowy/streets",
+         new ers(
+            $$11,
+            ImmutableList.of(
+               Pair.of(erq.a("village/snowy/streets/corner_01", $$6), 2),
+               Pair.of(erq.a("village/snowy/streets/corner_02", $$6), 2),
+               Pair.of(erq.a("village/snowy/streets/corner_03", $$6), 2),
+               Pair.of(erq.a("village/snowy/streets/square_01", $$6), 2),
+               Pair.of(erq.a("village/snowy/streets/straight_01", $$6), 4),
+               Pair.of(erq.a("village/snowy/streets/straight_02", $$6), 4),
+               Pair.of(erq.a("village/snowy/streets/straight_03", $$6), 4),
+               Pair.of(erq.a("village/snowy/streets/straight_04", $$6), 7),
+               Pair.of(erq.a("village/snowy/streets/straight_06", $$6), 4),
+               Pair.of(erq.a("village/snowy/streets/straight_08", $$6), 4),
+               Pair.of(erq.a("village/snowy/streets/crossroad_02", $$6), 1),
+               Pair.of(erq.a("village/snowy/streets/crossroad_03", $$6), 2),
+               new Pair[]{
+                  Pair.of(erq.a("village/snowy/streets/crossroad_04", $$6), 2),
+                  Pair.of(erq.a("village/snowy/streets/crossroad_05", $$6), 2),
+                  Pair.of(erq.a("village/snowy/streets/crossroad_06", $$6), 2),
+                  Pair.of(erq.a("village/snowy/streets/turn_01", $$6), 3)
+               }
+            ),
+            ers.a.a
+         )
+      );
+      qo.a(
+         $$0,
+         "village/snowy/zombie/streets",
+         new ers(
+            $$11,
+            ImmutableList.of(
+               Pair.of(erq.a("village/snowy/zombie/streets/corner_01", $$6), 2),
+               Pair.of(erq.a("village/snowy/zombie/streets/corner_02", $$6), 2),
+               Pair.of(erq.a("village/snowy/zombie/streets/corner_03", $$6), 2),
+               Pair.of(erq.a("village/snowy/zombie/streets/square_01", $$6), 2),
+               Pair.of(erq.a("village/snowy/zombie/streets/straight_01", $$6), 4),
+               Pair.of(erq.a("village/snowy/zombie/streets/straight_02", $$6), 4),
+               Pair.of(erq.a("village/snowy/zombie/streets/straight_03", $$6), 4),
+               Pair.of(erq.a("village/snowy/zombie/streets/straight_04", $$6), 7),
+               Pair.of(erq.a("village/snowy/zombie/streets/straight_06", $$6), 4),
+               Pair.of(erq.a("village/snowy/zombie/streets/straight_08", $$6), 4),
+               Pair.of(erq.a("village/snowy/zombie/streets/crossroad_02", $$6), 1),
+               Pair.of(erq.a("village/snowy/zombie/streets/crossroad_03", $$6), 2),
+               new Pair[]{
+                  Pair.of(erq.a("village/snowy/zombie/streets/crossroad_04", $$6), 2),
+                  Pair.of(erq.a("village/snowy/zombie/streets/crossroad_05", $$6), 2),
+                  Pair.of(erq.a("village/snowy/zombie/streets/crossroad_06", $$6), 2),
+                  Pair.of(erq.a("village/snowy/zombie/streets/turn_01", $$6), 3)
+               }
+            ),
+            ers.a.a
+         )
+      );
+      qo.a(
+         $$0,
+         "village/snowy/houses",
+         new ers(
+            $$11,
+            ImmutableList.of(
+               Pair.of(erq.a("village/snowy/houses/snowy_small_house_1"), 2),
+               Pair.of(erq.a("village/snowy/houses/snowy_small_house_2"), 2),
+               Pair.of(erq.a("village/snowy/houses/snowy_small_house_3"), 2),
+               Pair.of(erq.a("village/snowy/houses/snowy_small_house_4"), 3),
+               Pair.of(erq.a("village/snowy/houses/snowy_small_house_5"), 2),
+               Pair.of(erq.a("village/snowy/houses/snowy_small_house_6"), 2),
+               Pair.of(erq.a("village/snowy/houses/snowy_small_house_7"), 2),
+               Pair.of(erq.a("village/snowy/houses/snowy_small_house_8"), 2),
+               Pair.of(erq.a("village/snowy/houses/snowy_medium_house_1"), 2),
+               Pair.of(erq.a("village/snowy/houses/snowy_medium_house_2"), 2),
+               Pair.of(erq.a("village/snowy/houses/snowy_medium_house_3"), 2),
+               Pair.of(erq.a("village/snowy/houses/snowy_butchers_shop_1"), 2),
+               new Pair[]{
+                  Pair.of(erq.a("village/snowy/houses/snowy_butchers_shop_2"), 2),
+                  Pair.of(erq.a("village/snowy/houses/snowy_tool_smith_1"), 2),
+                  Pair.of(erq.a("village/snowy/houses/snowy_fletcher_house_1"), 2),
+                  Pair.of(erq.a("village/snowy/houses/snowy_shepherds_house_1"), 3),
+                  Pair.of(erq.a("village/snowy/houses/snowy_armorer_house_1"), 1),
+                  Pair.of(erq.a("village/snowy/houses/snowy_armorer_house_2"), 1),
+                  Pair.of(erq.a("village/snowy/houses/snowy_fisher_cottage"), 2),
+                  Pair.of(erq.a("village/snowy/houses/snowy_tannery_1"), 2),
+                  Pair.of(erq.a("village/snowy/houses/snowy_cartographer_house_1"), 2),
+                  Pair.of(erq.a("village/snowy/houses/snowy_library_1"), 2),
+                  Pair.of(erq.a("village/snowy/houses/snowy_masons_house_1"), 2),
+                  Pair.of(erq.a("village/snowy/houses/snowy_masons_house_2"), 2),
+                  Pair.of(erq.a("village/snowy/houses/snowy_weapon_smith_1"), 2),
+                  Pair.of(erq.a("village/snowy/houses/snowy_temple_1"), 2),
+                  Pair.of(erq.a("village/snowy/houses/snowy_farm_1", $$7), 3),
+                  Pair.of(erq.a("village/snowy/houses/snowy_farm_2", $$7), 3),
+                  Pair.of(erq.a("village/snowy/houses/snowy_animal_pen_1"), 2),
+                  Pair.of(erq.a("village/snowy/houses/snowy_animal_pen_2"), 2),
+                  Pair.of(erq.h(), 6)
+               }
+            ),
+            ers.a.b
+         )
+      );
+      qo.a(
+         $$0,
+         "village/snowy/zombie/houses",
+         new ers(
+            $$11,
+            ImmutableList.of(
+               Pair.of(erq.a("village/snowy/zombie/houses/snowy_small_house_1", $$8), 2),
+               Pair.of(erq.a("village/snowy/zombie/houses/snowy_small_house_2", $$8), 2),
+               Pair.of(erq.a("village/snowy/zombie/houses/snowy_small_house_3", $$8), 2),
+               Pair.of(erq.a("village/snowy/zombie/houses/snowy_small_house_4", $$8), 2),
+               Pair.of(erq.a("village/snowy/zombie/houses/snowy_small_house_5", $$8), 2),
+               Pair.of(erq.a("village/snowy/zombie/houses/snowy_small_house_6", $$8), 2),
+               Pair.of(erq.a("village/snowy/zombie/houses/snowy_small_house_7", $$8), 2),
+               Pair.of(erq.a("village/snowy/zombie/houses/snowy_small_house_8", $$8), 2),
+               Pair.of(erq.a("village/snowy/zombie/houses/snowy_medium_house_1", $$8), 2),
+               Pair.of(erq.a("village/snowy/zombie/houses/snowy_medium_house_2", $$8), 2),
+               Pair.of(erq.a("village/snowy/zombie/houses/snowy_medium_house_3", $$8), 1),
+               Pair.of(erq.a("village/snowy/houses/snowy_butchers_shop_1", $$8), 2),
+               new Pair[]{
+                  Pair.of(erq.a("village/snowy/houses/snowy_butchers_shop_2", $$8), 2),
+                  Pair.of(erq.a("village/snowy/houses/snowy_tool_smith_1", $$8), 2),
+                  Pair.of(erq.a("village/snowy/houses/snowy_fletcher_house_1", $$8), 2),
+                  Pair.of(erq.a("village/snowy/houses/snowy_shepherds_house_1", $$8), 2),
+                  Pair.of(erq.a("village/snowy/houses/snowy_armorer_house_1", $$8), 1),
+                  Pair.of(erq.a("village/snowy/houses/snowy_armorer_house_2", $$8), 1),
+                  Pair.of(erq.a("village/snowy/houses/snowy_fisher_cottage", $$8), 2),
+                  Pair.of(erq.a("village/snowy/houses/snowy_tannery_1", $$8), 2),
+                  Pair.of(erq.a("village/snowy/houses/snowy_cartographer_house_1", $$8), 2),
+                  Pair.of(erq.a("village/snowy/houses/snowy_library_1", $$8), 2),
+                  Pair.of(erq.a("village/snowy/houses/snowy_masons_house_1", $$8), 2),
+                  Pair.of(erq.a("village/snowy/houses/snowy_masons_house_2", $$8), 2),
+                  Pair.of(erq.a("village/snowy/houses/snowy_weapon_smith_1", $$8), 2),
+                  Pair.of(erq.a("village/snowy/houses/snowy_temple_1", $$8), 2),
+                  Pair.of(erq.a("village/snowy/houses/snowy_farm_1", $$8), 3),
+                  Pair.of(erq.a("village/snowy/houses/snowy_farm_2", $$8), 3),
+                  Pair.of(erq.a("village/snowy/houses/snowy_animal_pen_1", $$8), 2),
+                  Pair.of(erq.a("village/snowy/houses/snowy_animal_pen_2", $$8), 2),
+                  Pair.of(erq.h(), 6)
+               }
+            ),
+            ers.a.b
+         )
+      );
+      $$0.a(
+         b,
+         new ers(
+            $$10,
+            ImmutableList.of(
+               Pair.of(erq.a("village/plains/terminators/terminator_01", $$6), 1),
+               Pair.of(erq.a("village/plains/terminators/terminator_02", $$6), 1),
+               Pair.of(erq.a("village/plains/terminators/terminator_03", $$6), 1),
+               Pair.of(erq.a("village/plains/terminators/terminator_04", $$6), 1)
+            ),
+            ers.a.a
+         )
+      );
+      qo.a($$0, "village/snowy/trees", new ers($$10, ImmutableList.of(Pair.of(erq.a($$2), 1)), ers.a.b));
+      qo.a(
+         $$0,
+         "village/snowy/decor",
+         new ers(
+            $$10,
+            ImmutableList.of(
+               Pair.of(erq.a("village/snowy/snowy_lamp_post_01"), 4),
+               Pair.of(erq.a("village/snowy/snowy_lamp_post_02"), 4),
+               Pair.of(erq.a("village/snowy/snowy_lamp_post_03"), 1),
+               Pair.of(erq.a($$2), 4),
+               Pair.of(erq.a($$3), 4),
+               Pair.of(erq.a($$4), 1),
+               Pair.of(erq.h(), 9)
+            ),
+            ers.a.b
+         )
+      );
+      qo.a(
+         $$0,
+         "village/snowy/zombie/decor",
+         new ers(
+            $$10,
+            ImmutableList.of(
+               Pair.of(erq.a("village/snowy/snowy_lamp_post_01", $$8), 1),
+               Pair.of(erq.a("village/snowy/snowy_lamp_post_02", $$8), 1),
+               Pair.of(erq.a("village/snowy/snowy_lamp_post_03", $$8), 1),
+               Pair.of(erq.a($$2), 4),
+               Pair.of(erq.a($$3), 4),
+               Pair.of(erq.a($$4), 4),
+               Pair.of(erq.h(), 7)
+            ),
+            ers.a.b
+         )
+      );
+      qo.a(
+         $$0,
+         "village/snowy/villagers",
+         new ers(
+            $$10,
+            ImmutableList.of(
+               Pair.of(erq.a("village/snowy/villagers/nitwit"), 1),
+               Pair.of(erq.a("village/snowy/villagers/baby"), 1),
+               Pair.of(erq.a("village/snowy/villagers/unemployed"), 10)
+            ),
+            ers.a.b
+         )
+      );
+      qo.a(
+         $$0,
+         "village/snowy/zombie/villagers",
+         new ers(
+            $$10,
+            ImmutableList.of(Pair.of(erq.a("village/snowy/zombie/villagers/nitwit"), 1), Pair.of(erq.a("village/snowy/zombie/villagers/unemployed"), 10)),
+            ers.a.b
+         )
+      );
    }
 }
