@@ -1,290 +1,330 @@
+import com.google.common.collect.ImmutableList;
 import java.util.List;
+import java.util.Optional;
+import java.util.OptionalInt;
 
 public class rn {
-   public static final alc<ehd<?, ?>> a = rh.a("bamboo_no_podzol");
-   public static final alc<ehd<?, ?>> b = rh.a("bamboo_some_podzol");
-   public static final alc<ehd<?, ?>> c = rh.a("vines");
-   public static final alc<ehd<?, ?>> d = rh.a("patch_brown_mushroom");
-   public static final alc<ehd<?, ?>> e = rh.a("patch_red_mushroom");
-   public static final alc<ehd<?, ?>> f = rh.a("patch_sunflower");
-   public static final alc<ehd<?, ?>> g = rh.a("patch_pumpkin");
-   public static final alc<ehd<?, ?>> h = rh.a("patch_berry_bush");
-   public static final alc<ehd<?, ?>> i = rh.a("patch_taiga_grass");
-   public static final alc<ehd<?, ?>> j = rh.a("patch_grass");
-   public static final alc<ehd<?, ?>> k = rh.a("patch_grass_meadow");
-   public static final alc<ehd<?, ?>> l = rh.a("patch_grass_jungle");
-   public static final alc<ehd<?, ?>> m = rh.a("single_piece_of_grass");
-   public static final alc<ehd<?, ?>> n = rh.a("patch_dead_bush");
-   public static final alc<ehd<?, ?>> o = rh.a("patch_melon");
-   public static final alc<ehd<?, ?>> p = rh.a("patch_waterlily");
-   public static final alc<ehd<?, ?>> q = rh.a("patch_tall_grass");
-   public static final alc<ehd<?, ?>> r = rh.a("patch_large_fern");
-   public static final alc<ehd<?, ?>> s = rh.a("patch_leaf_litter");
-   public static final alc<ehd<?, ?>> t = rh.a("patch_cactus");
-   public static final alc<ehd<?, ?>> u = rh.a("patch_sugar_cane");
-   public static final alc<ehd<?, ?>> v = rh.a("flower_default");
-   public static final alc<ehd<?, ?>> w = rh.a("flower_flower_forest");
-   public static final alc<ehd<?, ?>> x = rh.a("flower_swamp");
-   public static final alc<ehd<?, ?>> y = rh.a("flower_plain");
-   public static final alc<ehd<?, ?>> z = rh.a("flower_meadow");
-   public static final alc<ehd<?, ?>> A = rh.a("flower_cherry");
-   public static final alc<ehd<?, ?>> B = rh.a("flower_pale_garden");
-   public static final alc<ehd<?, ?>> C = rh.a("wildflowers_birch_forest");
-   public static final alc<ehd<?, ?>> D = rh.a("wildflowers_meadow");
-   public static final alc<ehd<?, ?>> E = rh.a("forest_flowers");
-   public static final alc<ehd<?, ?>> F = rh.a("pale_forest_flowers");
-   public static final alc<ehd<?, ?>> G = rh.a("dark_forest_vegetation");
-   public static final alc<ehd<?, ?>> H = rh.a("pale_garden_vegetation");
-   public static final alc<ehd<?, ?>> I = rh.a("pale_moss_vegetation");
-   public static final alc<ehd<?, ?>> J = rh.a("pale_moss_patch");
-   public static final alc<ehd<?, ?>> K = rh.a("pale_moss_patch_bonemeal");
-   public static final alc<ehd<?, ?>> L = rh.a("trees_flower_forest");
-   public static final alc<ehd<?, ?>> M = rh.a("meadow_trees");
-   public static final alc<ehd<?, ?>> N = rh.a("trees_taiga");
-   public static final alc<ehd<?, ?>> O = rh.a("trees_grove");
-   public static final alc<ehd<?, ?>> P = rh.a("trees_savanna");
-   public static final alc<ehd<?, ?>> Q = rh.a("birch_tall");
-   public static final alc<ehd<?, ?>> R = rh.a("trees_windswept_hills");
-   public static final alc<ehd<?, ?>> S = rh.a("trees_water");
-   public static final alc<ehd<?, ?>> T = rh.a("trees_birch_and_oak_leaf_litter");
-   public static final alc<ehd<?, ?>> U = rh.a("trees_plains");
-   public static final alc<ehd<?, ?>> V = rh.a("trees_sparse_jungle");
-   public static final alc<ehd<?, ?>> W = rh.a("trees_old_growth_spruce_taiga");
-   public static final alc<ehd<?, ?>> X = rh.a("trees_old_growth_pine_taiga");
-   public static final alc<ehd<?, ?>> Y = rh.a("trees_jungle");
-   public static final alc<ehd<?, ?>> Z = rh.a("bamboo_vegetation");
-   public static final alc<ehd<?, ?>> aa = rh.a("mushroom_island_vegetation");
-   public static final alc<ehd<?, ?>> ab = rh.a("mangrove_vegetation");
+   public static final ald<eif<?, ?>> a = ri.a("crimson_fungus");
+   public static final ald<eif<?, ?>> b = ri.a("crimson_fungus_planted");
+   public static final ald<eif<?, ?>> c = ri.a("warped_fungus");
+   public static final ald<eif<?, ?>> d = ri.a("warped_fungus_planted");
+   public static final ald<eif<?, ?>> e = ri.a("huge_brown_mushroom");
+   public static final ald<eif<?, ?>> f = ri.a("huge_red_mushroom");
+   public static final ald<eif<?, ?>> g = ri.a("oak");
+   public static final ald<eif<?, ?>> h = ri.a("dark_oak");
+   public static final ald<eif<?, ?>> i = ri.a("pale_oak");
+   public static final ald<eif<?, ?>> j = ri.a("pale_oak_bonemeal");
+   public static final ald<eif<?, ?>> k = ri.a("pale_oak_creaking");
+   public static final ald<eif<?, ?>> l = ri.a("birch");
+   public static final ald<eif<?, ?>> m = ri.a("acacia");
+   public static final ald<eif<?, ?>> n = ri.a("spruce");
+   public static final ald<eif<?, ?>> o = ri.a("pine");
+   public static final ald<eif<?, ?>> p = ri.a("jungle_tree");
+   public static final ald<eif<?, ?>> q = ri.a("fancy_oak");
+   public static final ald<eif<?, ?>> r = ri.a("jungle_tree_no_vine");
+   public static final ald<eif<?, ?>> s = ri.a("mega_jungle_tree");
+   public static final ald<eif<?, ?>> t = ri.a("mega_spruce");
+   public static final ald<eif<?, ?>> u = ri.a("mega_pine");
+   public static final ald<eif<?, ?>> v = ri.a("super_birch_bees_0002");
+   public static final ald<eif<?, ?>> w = ri.a("super_birch_bees");
+   public static final ald<eif<?, ?>> x = ri.a("swamp_oak");
+   public static final ald<eif<?, ?>> y = ri.a("jungle_bush");
+   public static final ald<eif<?, ?>> z = ri.a("azalea_tree");
+   public static final ald<eif<?, ?>> A = ri.a("mangrove");
+   public static final ald<eif<?, ?>> B = ri.a("tall_mangrove");
+   public static final ald<eif<?, ?>> C = ri.a("cherry");
+   public static final ald<eif<?, ?>> D = ri.a("oak_bees_0002_leaf_litter");
+   public static final ald<eif<?, ?>> E = ri.a("oak_bees_002");
+   public static final ald<eif<?, ?>> F = ri.a("oak_bees_005");
+   public static final ald<eif<?, ?>> G = ri.a("birch_bees_0002");
+   public static final ald<eif<?, ?>> H = ri.a("birch_bees_0002_leaf_litter");
+   public static final ald<eif<?, ?>> I = ri.a("birch_bees_002");
+   public static final ald<eif<?, ?>> J = ri.a("birch_bees_005");
+   public static final ald<eif<?, ?>> K = ri.a("fancy_oak_bees_0002_leaf_litter");
+   public static final ald<eif<?, ?>> L = ri.a("fancy_oak_bees_002");
+   public static final ald<eif<?, ?>> M = ri.a("fancy_oak_bees_005");
+   public static final ald<eif<?, ?>> N = ri.a("fancy_oak_bees");
+   public static final ald<eif<?, ?>> O = ri.a("cherry_bees_005");
+   public static final ald<eif<?, ?>> P = ri.a("oak_leaf_litter");
+   public static final ald<eif<?, ?>> Q = ri.a("dark_oak_leaf_litter");
+   public static final ald<eif<?, ?>> R = ri.a("birch_leaf_litter");
+   public static final ald<eif<?, ?>> S = ri.a("fancy_oak_leaf_litter");
 
-   private static eki a(elw $$0, int $$1) {
-      return rh.a($$1, rw.a(ehr.T, new ekn($$0)));
+   private static elt.a a(dlu $$0, dlu $$1, int $$2, int $$3, int $$4, int $$5) {
+      return new elt.a(emy.a($$0), new eod($$2, $$3, $$4), emy.a($$1), new eme(bta.a($$5), bta.a(0), 3), new emb(1, 0, 1));
    }
 
-   public static void a(qg<ehd<?, ?>> $$0) {
-      jt<ehd<?, ?>> $$1 = $$0.a(me.aP);
-      js<ehd<?, ?>> $$2 = $$1.b(rm.e);
-      js<ehd<?, ?>> $$3 = $$1.b(rm.f);
-      js<ehd<?, ?>> $$4 = $$1.b(rm.M);
-      js<ehd<?, ?>> $$5 = $$1.b(rm.F);
-      js<ehd<?, ?>> $$6 = $$1.b(l);
-      jt<eok> $$7 = $$0.a(me.aY);
-      js<eok> $$8 = $$7.b(rx.e);
-      js<eok> $$9 = $$7.b(rx.f);
-      js<eok> $$10 = $$7.b(rx.p);
-      js<eok> $$11 = $$7.b(rx.B);
-      js<eok> $$12 = $$7.b(rx.D);
-      js<eok> $$13 = $$7.b(rx.E);
-      js<eok> $$14 = $$7.b(rx.n);
-      js<eok> $$15 = $$7.b(rx.i);
-      js<eok> $$16 = $$7.b(rx.l);
-      js<eok> $$17 = $$7.b(rx.h);
-      js<eok> $$18 = $$7.b(rx.v);
-      js<eok> $$19 = $$7.b(rx.z);
-      js<eok> $$20 = $$7.b(rx.A);
-      js<eok> $$21 = $$7.b(rx.C);
-      js<eok> $$22 = $$7.b(rx.u);
-      js<eok> $$23 = $$7.b(rx.r);
-      js<eok> $$24 = $$7.b(rx.s);
-      js<eok> $$25 = $$7.b(rx.q);
-      js<eok> $$26 = $$7.b(rx.t);
-      js<eok> $$27 = $$7.b(rx.c);
-      js<eok> $$28 = $$7.b(rx.y);
-      js<eok> $$29 = $$7.b(rx.w);
-      js<eok> $$30 = $$7.b(rx.m);
-      js<eok> $$31 = $$7.b(rx.x);
-      js<eok> $$32 = $$7.b(rx.o);
-      js<eok> $$33 = $$7.b(rx.j);
-      js<eok> $$34 = $$7.b(rx.G);
-      js<eok> $$35 = $$7.b(rx.H);
-      js<eok> $$36 = $$7.b(rx.I);
-      js<eok> $$37 = $$7.b(rx.J);
-      rh.a($$0, a, ehr.U, new ekf(0.0F));
-      rh.a($$0, b, ehr.U, new ekf(0.2F));
-      rh.a($$0, c, ehr.v);
-      rh.a($$0, d, ehr.i, rh.a(ehr.T, new ekn(elw.a(dkw.cm))));
-      rh.a($$0, e, ehr.i, rh.a(ehr.T, new ekn(elw.a(dkw.cn))));
-      rh.a($$0, f, ehr.i, rh.a(ehr.T, new ekn(elw.a(dkw.jb))));
-      rh.a($$0, g, ehr.i, rh.a(ehr.T, new ekn(elw.a(dkw.fn)), List.of(dkw.i)));
-      rh.a($$0, h, ehr.i, rh.a(ehr.T, new ekn(elw.a(dkw.oK.m().b(dtd.c, Integer.valueOf(3)))), List.of(dkw.i)));
-      rh.a($$0, i, ehr.i, a(new emg(bsb.<dym>b().a(dkw.bA.m(), 1).a(dkw.bB.m(), 4)), 32));
-      rh.a($$0, j, ehr.i, a(elw.a(dkw.bA), 32));
-      rh.a($$0, k, ehr.i, a(elw.a(dkw.bA), 16));
-      rh.a($$0, s, ehr.i, rh.a(32, rw.a(ehr.T, new ekn(new emg(a(1, 3))))));
-      rh.a(
-         $$0,
-         l,
-         ehr.i,
-         new eki(32, 7, 3, rw.a(ehr.T, new ekn(new emg(bsb.<dym>b().a(dkw.bA.m(), 3).a(dkw.bB.m(), 1))), efs.a(efs.c, efs.a(efs.a(jo.a.q(), dkw.l)))))
+   private static elt.a a() {
+      return a(dlw.X, dlw.aK, 4, 2, 0, 2).a();
+   }
+
+   private static elt.a b() {
+      return new elt.a(emy.a(dlw.ad), new eny(6, 2, 1), emy.a(dlw.aQ), new emh(bta.a(0), bta.a(0)), new ema(1, 1, 0, 1, 2, OptionalInt.empty()));
+   }
+
+   private static elt.a c() {
+      return a(dlw.Z, dlw.aM, 5, 2, 0, 2).a();
+   }
+
+   private static elt.a d() {
+      return a(dlw.Z, dlw.aM, 5, 2, 6, 2).a();
+   }
+
+   private static elt.a e() {
+      return a(dlw.aa, dlw.aN, 4, 8, 0, 2);
+   }
+
+   private static elt.a f() {
+      return new elt.a(emy.a(dlw.X), new enz(3, 11, 0), emy.a(dlw.aK), new emi(bta.a(2), bta.a(4), 4), new emb(0, 0, 0, OptionalInt.of(4))).a();
+   }
+
+   private static elt.a g() {
+      return new elt.a(
+            emy.a(dlw.ac),
+            new enx(7, 1, 0, new btk(bsj.<btd>b().a(bta.a(1), 1).a(bta.a(2), 1).a(bta.a(3), 1).a()), btj.a(2, 4), btj.a(-4, -3), btj.a(-1, 0)),
+            emy.a(dlw.aP),
+            new emg(bta.a(4), bta.a(0), bta.a(5), 0.25F, 0.5F, 0.16666667F, 0.33333334F),
+            new emb(1, 0, 2)
+         )
+         .a();
+   }
+
+   public static void a(qh<eif<?, ?>> $$0) {
+      jf<dlu> $$1 = $$0.a(mg.i);
+      egu $$2 = egu.a(
+         dlw.z,
+         dlw.A,
+         dlw.B,
+         dlw.C,
+         dlw.D,
+         dlw.E,
+         dlw.F,
+         dlw.G,
+         dlw.H,
+         dlw.bY,
+         dlw.bZ,
+         dlw.ca,
+         dlw.cb,
+         dlw.cc,
+         dlw.cd,
+         dlw.ce,
+         dlw.cf,
+         dlw.cg,
+         dlw.ch,
+         dlw.ci,
+         dlw.cj,
+         dlw.ck,
+         dlw.cl,
+         dlw.cm,
+         dlw.cn,
+         dlw.cJ,
+         dlw.ef,
+         dlw.fp,
+         dlw.fq,
+         dlw.fr,
+         dlw.fs,
+         dlw.fB,
+         dlw.fL,
+         dlw.fX,
+         dlw.gP,
+         dlw.gQ,
+         dlw.kW,
+         dlw.kX,
+         dlw.lc,
+         dlw.ld,
+         dlw.lf,
+         dlw.oK,
+         dlw.oQ,
+         dlw.oZ,
+         dlw.pb,
+         dlw.pc,
+         dlw.pd,
+         dlw.pe,
+         dlw.sZ,
+         dlw.ta,
+         dlw.tb,
+         dlw.tc,
+         dlw.td,
+         dlw.te,
+         dlw.tf,
+         dlw.tg,
+         dlw.tj,
+         dlw.tk,
+         dlw.tl
       );
-      rh.a($$0, m, ehr.T, new ekn(elw.a(dkw.bA.m())));
-      rh.a($$0, n, ehr.i, a(elw.a(dkw.bC), 4));
-      rh.a($$0, o, ehr.i, new eki(64, 7, 3, rw.a(ehr.T, new ekn(elw.a(dkw.fo)), efs.a(efs.b(), efs.d(), efs.a(jo.a.q(), dkw.i)))));
-      rh.a($$0, p, ehr.i, new eki(10, 7, 3, rw.a(ehr.T, new ekn(elw.a(dkw.fB)))));
-      rh.a($$0, q, ehr.i, rh.a(ehr.T, new ekn(elw.a(dkw.jf))));
-      rh.a($$0, r, ehr.i, rh.a(ehr.T, new ekn(elw.a(dkw.jg))));
-      rh.a($$0, t, ehr.i, rh.a(10, rw.a(ehr.w, ejm.b(bsn.a(1, 3), elw.a(dkw.ed)), enz.a(efs.a(efs.c, efs.a(dkw.ed.m(), jj.c))))));
-      rh.a(
+      ri.a($$0, a, eit.V, new ejc(dlw.oY.m(), dlw.oU.m(), dlw.lm.m(), dlw.pa.m(), $$2, false));
+      ri.a($$0, b, eit.V, new ejc(dlw.oY.m(), dlw.oU.m(), dlw.lm.m(), dlw.pa.m(), $$2, true));
+      ri.a($$0, c, eit.V, new ejc(dlw.oP.m(), dlw.oL.m(), dlw.oR.m(), dlw.pa.m(), $$2, false));
+      ri.a($$0, d, eit.V, new ejc(dlw.oP.m(), dlw.oL.m(), dlw.oR.m(), dlw.pa.m(), $$2, true));
+      ri.a(
+         $$0,
+         e,
+         eit.r,
+         new ekz(
+            emy.a(dlw.fh.m().b(dpu.f, Boolean.valueOf(true)).b(dpu.g, Boolean.valueOf(false))),
+            emy.a(dlw.fj.m().b(dpu.f, Boolean.valueOf(false)).b(dpu.g, Boolean.valueOf(false))),
+            3
+         )
+      );
+      ri.a(
+         $$0,
+         f,
+         eit.q,
+         new ekz(emy.a(dlw.fi.m().b(dpu.g, Boolean.valueOf(false))), emy.a(dlw.fj.m().b(dpu.f, Boolean.valueOf(false)).b(dpu.g, Boolean.valueOf(false))), 2)
+      );
+      enm $$3 = new enm(0.002F);
+      enm $$4 = new enm(0.01F);
+      enm $$5 = new enm(0.02F);
+      enm $$6 = new enm(0.05F);
+      enm $$7 = new enm(1.0F);
+      enr $$8 = new enr(96, 4, 2, new eni(ro.a(1, 3)));
+      enr $$9 = new enr(150, 2, 2, new eni(ro.a(1, 4)));
+      ri.a($$0, g, eit.f, a().c());
+      ri.a($$0, h, eit.f, b().a().c());
+      ri.a(
+         $$0,
+         i,
+         eit.f,
+         new elt.a(emy.a(dlw.ae), new eny(6, 2, 1), emy.a(dlw.aR), new emh(bta.a(0), bta.a(0)), new ema(1, 1, 0, 1, 2, OptionalInt.empty()))
+            .a(ImmutableList.of(new enq(0.15F, 0.4F, 0.8F)))
+            .a()
+            .c()
+      );
+      ri.a(
+         $$0,
+         j,
+         eit.f,
+         new elt.a(emy.a(dlw.ae), new eny(6, 2, 1), emy.a(dlw.aR), new emh(bta.a(0), bta.a(0)), new ema(1, 1, 0, 1, 2, OptionalInt.empty())).a().c()
+      );
+      ri.a(
+         $$0,
+         k,
+         eit.f,
+         new elt.a(emy.a(dlw.ae), new eny(6, 2, 1), emy.a(dlw.aR), new emh(bta.a(0), bta.a(0)), new ema(1, 1, 0, 1, 2, OptionalInt.empty()))
+            .a(ImmutableList.of(new enq(0.15F, 0.4F, 0.8F), new eno(1.0F)))
+            .a()
+            .c()
+      );
+      ri.a($$0, l, eit.f, c().c());
+      ri.a($$0, m, eit.f, new elt.a(emy.a(dlw.ab), new eoa(5, 2, 2), emy.a(dlw.aO), new emd(bta.a(2), bta.a(0)), new emb(1, 0, 2)).a().c());
+      ri.a($$0, C, eit.f, g().c());
+      ri.a($$0, O, eit.f, g().a(List.of($$6)).c());
+      ri.a($$0, n, eit.f, new elt.a(emy.a(dlw.Y), new eod(5, 2, 1), emy.a(dlw.aL), new emp(btj.a(2, 3), btj.a(0, 2), btj.a(1, 2)), new emb(2, 0, 2)).a().c());
+      ri.a($$0, o, eit.f, new elt.a(emy.a(dlw.Y), new eod(6, 4, 0), emy.a(dlw.aL), new emn(bta.a(1), bta.a(1), btj.a(3, 4)), new emb(2, 0, 2)).a().c());
+      ri.a($$0, p, eit.f, e().a(ImmutableList.of(new enn(0.2F), enu.b, new enp(0.25F))).a().c());
+      ri.a($$0, q, eit.f, f().c());
+      ri.a($$0, r, eit.f, e().a().c());
+      ri.a(
+         $$0,
+         s,
+         eit.f,
+         new elt.a(emy.a(dlw.aa), new eoc(10, 2, 19), emy.a(dlw.aN), new eml(bta.a(2), bta.a(0), 2), new emb(1, 1, 2))
+            .a(ImmutableList.of(enu.b, new enp(0.25F)))
+            .c()
+      );
+      ri.a(
+         $$0,
+         t,
+         eit.f,
+         new elt.a(emy.a(dlw.Y), new eob(13, 2, 14), emy.a(dlw.aL), new emm(bta.a(0), bta.a(0), btj.a(13, 17)), new emb(1, 1, 2))
+            .a(ImmutableList.of(new enk(emy.a(dlw.l))))
+            .c()
+      );
+      ri.a(
          $$0,
          u,
-         ehr.i,
-         new eki(
-            20,
-            4,
-            0,
-            rw.a(
-               ehr.w,
-               ejm.b(bsn.a(2, 4), elw.a(dkw.ef)),
-               enz.a(
-                  efs.a(
-                     efs.c,
-                     efs.a(dkw.ef.m(), jj.c),
-                     efs.b(
-                        efs.a(new jj(1, -1, 0), euu.c, euu.b),
-                        efs.a(new jj(-1, -1, 0), euu.c, euu.b),
-                        efs.a(new jj(0, -1, 1), euu.c, euu.b),
-                        efs.a(new jj(0, -1, -1), euu.c, euu.b)
-                     )
-                  )
-               )
-            )
-         )
+         eit.f,
+         new elt.a(emy.a(dlw.Y), new eob(13, 2, 14), emy.a(dlw.aL), new emm(bta.a(0), bta.a(0), btj.a(3, 7)), new emb(1, 1, 2))
+            .a(ImmutableList.of(new enk(emy.a(dlw.l))))
+            .c()
       );
-      rh.a($$0, v, ehr.g, a(new emg(bsb.<dym>b().a(dkw.ca.m(), 2).a(dkw.bY.m(), 1)), 64));
-      rh.a(
-         $$0,
-         w,
-         ehr.g,
-         new eki(
-            96,
-            6,
-            2,
-            rw.a(
-               ehr.T,
-               new ekn(
-                  new ema(
-                     2345L,
-                     new etw.a(0, 1.0),
-                     0.020833334F,
-                     List.of(dkw.bY.m(), dkw.ca.m(), dkw.cc.m(), dkw.cd.m(), dkw.ce.m(), dkw.cf.m(), dkw.cg.m(), dkw.ch.m(), dkw.ci.m(), dkw.cj.m(), dkw.cl.m())
-                  )
-               )
-            )
-         )
-      );
-      rh.a($$0, x, ehr.g, new eki(64, 6, 2, rw.a(ehr.T, new ekn(elw.a(dkw.cb)))));
-      rh.a(
-         $$0,
-         y,
-         ehr.g,
-         new eki(
-            64,
-            6,
-            2,
-            rw.a(
-               ehr.T,
-               new ekn(
-                  new emb(
-                     2345L,
-                     new etw.a(0, 1.0),
-                     0.005F,
-                     -0.8F,
-                     0.33333334F,
-                     dkw.bY.m(),
-                     List.of(dkw.cf.m(), dkw.ce.m(), dkw.ch.m(), dkw.cg.m()),
-                     List.of(dkw.ca.m(), dkw.cd.m(), dkw.ci.m(), dkw.cj.m())
-                  )
-               )
-            )
-         )
-      );
-      rh.a(
+      ri.a($$0, v, eit.f, d().a(ImmutableList.of($$3)).c());
+      ri.a($$0, w, eit.f, d().a(ImmutableList.of($$7)).c());
+      ri.a($$0, x, eit.f, a(dlw.X, dlw.aK, 5, 3, 0, 3).a(ImmutableList.of(new enp(0.25F))).c());
+      ri.a($$0, y, eit.f, new elt.a(emy.a(dlw.aa), new eod(1, 0, 0), emy.a(dlw.aK), new emf(bta.a(2), bta.a(1), 2), new emb(0, 0, 0)).c());
+      ri.a(
          $$0,
          z,
-         ehr.g,
-         new eki(
-            96,
-            6,
-            2,
-            rw.a(
-               ehr.T,
-               new ekn(
-                  new ely(
-                     new azc<>(1, 3),
-                     new etw.a(-10, 1.0),
-                     1.0F,
-                     2345L,
-                     new etw.a(-3, 1.0),
-                     1.0F,
-                     List.of(dkw.jf.m(), dkw.cc.m(), dkw.ca.m(), dkw.cd.m(), dkw.bY.m(), dkw.cj.m(), dkw.ci.m(), dkw.bA.m())
+         eit.f,
+         new elt.a(
+               emy.a(dlw.X),
+               new enw(4, 2, 0, 3, btj.a(1, 2)),
+               new eni(bsj.<dzo>b().a(dlw.aT.m(), 3).a(dlw.aU.m(), 1)),
+               new emo(bta.a(3), bta.a(0), bta.a(2), 50),
+               new emb(1, 0, 1)
+            )
+            .a(emy.a(dlw.tn))
+            .b()
+            .c()
+      );
+      ri.a(
+         $$0,
+         A,
+         eit.f,
+         new elt.a(
+               emy.a(dlw.af),
+               new eog(2, 1, 4, btj.a(1, 4), 0.5F, btj.a(0, 1), $$1.b(axa.cn)),
+               emy.a(dlw.aS),
+               new emo(bta.a(3), bta.a(0), bta.a(2), 70),
+               Optional.of(
+                  new emu(
+                     btj.a(1, 3),
+                     emy.a(dlw.ag),
+                     Optional.of(new ems(emy.a(dlw.te), 0.5F)),
+                     new emt($$1.b(axa.co), ji.a(dlu::p, dlw.to, dlw.ah), emy.a(dlw.ah), 8, 15, 0.2F)
                   )
+               ),
+               new emb(2, 0, 2)
+            )
+            .a(
+               List.of(
+                  new enp(0.125F), new enl(0.14F, 1, 0, new ene(emy.a(dlw.H.m().b(dqt.d, Boolean.valueOf(true))), dqt.b, btj.a(0, 4)), 2, List.of(ja.a)), $$4
                )
             )
-         )
+            .a()
+            .c()
       );
-      rh.a($$0, A, ehr.g, new eki(96, 6, 2, rw.a(ehr.T, new ekn(new emg(a(dkw.tf))))));
-      rh.a($$0, C, ehr.g, new eki(64, 6, 2, rw.a(ehr.T, new ekn(new emg(a(dkw.tg))))));
-      rh.a($$0, D, ehr.g, new eki(8, 6, 2, rw.a(ehr.T, new ekn(new emg(a(dkw.tg))))));
-      rh.a($$0, B, ehr.g, new eki(1, 0, 0, rw.a(ehr.T, new ekn(elw.a(dkw.ue), true))));
-      rh.a(
+      ri.a(
          $$0,
-         E,
-         ehr.ah,
-         new eko(
-            jw.a(
-               rw.a(ehr.i, rh.a(ehr.T, new ekn(elw.a(dkw.jc)))),
-               rw.a(ehr.i, rh.a(ehr.T, new ekn(elw.a(dkw.jd)))),
-               rw.a(ehr.i, rh.a(ehr.T, new ekn(elw.a(dkw.je)))),
-               rw.a(ehr.h, rh.a(ehr.T, new ekn(elw.a(dkw.cl))))
+         B,
+         eit.f,
+         new elt.a(
+               emy.a(dlw.af),
+               new eog(4, 1, 9, btj.a(1, 6), 0.5F, btj.a(0, 1), $$1.b(axa.cn)),
+               emy.a(dlw.aS),
+               new emo(bta.a(3), bta.a(0), bta.a(2), 70),
+               Optional.of(
+                  new emu(
+                     btj.a(3, 7),
+                     emy.a(dlw.ag),
+                     Optional.of(new ems(emy.a(dlw.te), 0.5F)),
+                     new emt($$1.b(axa.co), ji.a(dlu::p, dlw.to, dlw.ah), emy.a(dlw.ah), 8, 15, 0.2F)
+                  )
+               ),
+               new emb(3, 0, 2)
             )
-         )
+            .a(
+               List.of(
+                  new enp(0.125F), new enl(0.14F, 1, 0, new ene(emy.a(dlw.H.m().b(dqt.d, Boolean.valueOf(true))), dqt.b, btj.a(0, 4)), 2, List.of(ja.a)), $$4
+               )
+            )
+            .a()
+            .c()
       );
-      rh.a($$0, F, ehr.i, rh.a(ehr.T, new ekn(elw.a(dkw.ue), true)));
-      rh.a(
-         $$0,
-         G,
-         ehr.ag,
-         new ekh(List.of(new ejl(rw.a($$2), 0.025F), new ejl(rw.a($$3), 0.05F), new ejl($$35, 0.6666667F), new ejl($$36, 0.2F), new ejl($$37, 0.1F)), $$34)
-      );
-      rh.a($$0, H, ehr.ag, new ekh(List.of(new ejl($$9, 0.1F), new ejl($$8, 0.9F)), $$8));
-      rh.a($$0, I, ehr.T, new ekn(new emg(bsb.<dym>b().a(dkw.ub.m(), 25).a(dkw.bA.m(), 25).a(dkw.jf.m(), 10))));
-      rh.a($$0, J, ehr.x, new eku(awz.bw, elw.a(dkw.ua), rw.a($$1.b(I)), eoa.b, bss.a(1), 0.0F, 5, 0.3F, btb.a(2, 4), 0.75F));
-      rh.a($$0, K, ehr.x, new eku(awz.bw, elw.a(dkw.ua), rw.a($$1.b(I)), eoa.b, bss.a(1), 0.0F, 5, 0.6F, btb.a(1, 2), 0.75F));
-      rh.a($$0, L, ehr.ag, new ekh(List.of(new ejl($$11, 0.2F), new ejl($$12, 0.1F)), $$28));
-      rh.a($$0, M, ehr.ag, new ekh(List.of(new ejl($$13, 0.5F)), $$29));
-      rh.a($$0, N, ehr.ag, new ekh(List.of(new ejl($$14, 0.33333334F)), $$15));
-      rh.a($$0, O, ehr.ag, new ekh(List.of(new ejl($$16, 0.33333334F)), $$30));
-      rh.a($$0, P, ehr.ag, new ekh(List.of(new ejl($$17, 0.8F)), $$27));
-      rh.a($$0, Q, ehr.ag, new ekh(List.of(new ejl($$18, 0.5F)), $$19));
-      rh.a($$0, R, ehr.ag, new ekh(List.of(new ejl($$15, 0.666F), new ejl($$10, 0.1F)), $$27));
-      rh.a($$0, S, ehr.ag, new ekh(List.of(new ejl($$10, 0.1F)), $$27));
-      rh.a($$0, T, ehr.ag, new ekh(List.of(new ejl($$20, 0.2F), new ejl($$21, 0.1F)), $$31));
-      rh.a($$0, U, ehr.ag, new ekh(List.of(new ejl(rw.a($$4), 0.33333334F)), rw.a($$5)));
-      rh.a($$0, V, ehr.ag, new ekh(List.of(new ejl($$10, 0.1F), new ejl($$22, 0.5F)), $$32));
-      rh.a($$0, W, ehr.ag, new ekh(List.of(new ejl($$23, 0.33333334F), new ejl($$14, 0.33333334F)), $$15));
-      rh.a($$0, X, ehr.ag, new ekh(List.of(new ejl($$23, 0.025641026F), new ejl($$24, 0.30769232F), new ejl($$14, 0.33333334F)), $$15));
-      rh.a($$0, Y, ehr.ag, new ekh(List.of(new ejl($$10, 0.1F), new ejl($$22, 0.5F), new ejl($$25, 0.33333334F)), $$32));
-      rh.a($$0, Z, ehr.ag, new ekh(List.of(new ejl($$10, 0.05F), new ejl($$22, 0.15F), new ejl($$25, 0.7F)), rw.a($$6)));
-      rh.a($$0, aa, ehr.ai, new ekg(rw.a($$3), rw.a($$2)));
-      rh.a($$0, ab, ehr.ag, new ekh(List.of(new ejl($$26, 0.85F)), $$33));
-   }
-
-   private static bsb.a<dym> a(dku $$0) {
-      return a($$0, 1, 4, dnx.c, dnx.b);
-   }
-
-   public static bsb.a<dym> a(int $$0, int $$1) {
-      return a(dkw.th, $$0, $$1, dph.f, dph.b);
-   }
-
-   private static bsb.a<dym> a(dku $$0, int $$1, int $$2, dzm $$3, dzk<jo> $$4) {
-      bsb.a<dym> $$5 = bsb.b();
-
-      for (int $$6 = $$1; $$6 <= $$2; $$6++) {
-         for (jo $$7 : jo.c.a) {
-            $$5.a($$0.m().b($$3, Integer.valueOf($$6)).b($$4, $$7), 1);
-         }
-      }
-
-      return $$5;
+      ri.a($$0, D, eit.f, a().a(List.of($$3, $$8, $$9)).c());
+      ri.a($$0, E, eit.f, a().a(List.of($$5)).c());
+      ri.a($$0, F, eit.f, a().a(List.of($$6)).c());
+      ri.a($$0, G, eit.f, c().a(List.of($$3)).c());
+      ri.a($$0, H, eit.f, c().a(List.of($$3, $$8, $$9)).c());
+      ri.a($$0, I, eit.f, c().a(List.of($$5)).c());
+      ri.a($$0, J, eit.f, c().a(List.of($$6)).c());
+      ri.a($$0, K, eit.f, f().a(List.of($$3, $$8, $$9)).c());
+      ri.a($$0, L, eit.f, f().a(List.of($$5)).c());
+      ri.a($$0, M, eit.f, f().a(List.of($$6)).c());
+      ri.a($$0, N, eit.f, f().a(List.of($$7)).c());
+      ri.a($$0, P, eit.f, a().a(ImmutableList.of($$8, $$9)).c());
+      ri.a($$0, Q, eit.f, b().a().a(ImmutableList.of($$8, $$9)).c());
+      ri.a($$0, R, eit.f, c().a(ImmutableList.of($$8, $$9)).c());
+      ri.a($$0, S, eit.f, f().a(List.of($$8, $$9)).c());
    }
 }
